# otello

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  TODO  main.c  otello.c  otello.h
