cmake_minimum_required(VERSION 3.6)
project(otello)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    main.c
    otello.c
    otello.h)

add_executable(otello ${SOURCE_FILES})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL REQUIRED sdl)
PKG_SEARCH_MODULE(SDLTTF REQUIRED SDL_ttf)
PKG_SEARCH_MODULE(SDLIMAGE REQUIRED SDL_image)

INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIRS} ${SDLTTF_INCLUDE_DIRS} ${SDLIMAGE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL_LIBRARIES} ${SDLTTF_LIBRARIES} ${SDLIMAGE_LIBRARIES})